--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8e5c017690&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4ce9933a50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8e5bcd7950&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8e5bcd7b90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4ce9663cd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4ce9663ed0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8e5c2f2850&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8e5c2a74d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4ce9bb95d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4ce9bb97d0&gt;]</pre>
 </div>
 
 </div>
