--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1c1f7aaf10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0f7f8b1e10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1c1f4c3a50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1c1f4c3c50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0f7f26bc50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0f7f26be50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1c1fa33390&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1c1fa33590&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0f7f7db510&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0f7f7db710&gt;]</pre>
 </div>
 
 </div>
