--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fee9170c250&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f079037b050&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fee913f9d90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fee913f9fd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f07900a6590&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f07900b3e10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fee919b1690&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fee919b18d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f07905fe3d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f079060a6d0&gt;]</pre>
 </div>
 
 </div>
