--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f577d77fa10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f586f2684d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f577d1a1d90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f577d1a1f90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f586f2b83d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f586ef94f10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f577da22690&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f577da22890&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f586f86ddd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f586f821850&gt;]</pre>
 </div>
 
 </div>
