--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f626846ec50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5db9fc6b90&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6267e5bd50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6267e5bed0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5db9cd9d10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5db9cd9f10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f62686ea610&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f62686ea790&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5dba24a650&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5dba24a850&gt;]</pre>
 </div>
 
 </div>
