--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3342a4f650&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc38bf1bf10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f334277bbd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f334277bdd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc38bc3eb10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc38bc3ed10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3342cd1550&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3342cd1750&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc38c195450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc38c195650&gt;]</pre>
 </div>
 
 </div>
