--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff1cabf0550&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f70158bdd50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff1cac54d10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff1cac54f10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7015b8ec90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7015b8ee90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff1cb1c3610&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff1cb1c3810&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7016419550&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7016419750&gt;]</pre>
 </div>
 
 </div>
