--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f70158bdd50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f92d7413190&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7015b8ec90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7015b8ee90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f92d1189d90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f92d1189f90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7016419550&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7016419750&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f92d1a11690&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f92d1a11890&gt;]</pre>
 </div>
 
 </div>
