--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f36e2a61050&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb25521f410&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f36e2799b50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f36e2799d50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb254edf610&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb254f32ed0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f36e2cf04d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f36e2cf06d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb255222950&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb2554ab810&gt;]</pre>
 </div>
 
 </div>
