--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f153ef5b310&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff425ad5dd0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f153ec93c10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f153ec93e10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff425806d90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff425806f90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f153f1ea4d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f153f1ea6d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff425d5c590&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff425d5c790&gt;]</pre>
 </div>
 
 </div>
