--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff425ad5dd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f42a16aa390&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff425806d90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff425806f90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f42a108fbd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f42a108fdd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff425d5c590&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff425d5c790&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f42a15ff4d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f42a15ff6d0&gt;]</pre>
 </div>
 
 </div>
