--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8763545650&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9c34460750&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8763255c50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8763255e50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9c34193b10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9c34193d10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f87637c9550&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f87637c9750&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9c346ea410&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9c346ea610&gt;]</pre>
 </div>
 
 </div>
