--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7d88c99410&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb3c4c205d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7d889bd9d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7d889bdbd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb3c4957b10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb3c4957d10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7d88f28390&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7d88f28590&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb3c4eae450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb3c4eae650&gt;]</pre>
 </div>
 
 </div>
