--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3593475190&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe1a4ec0950&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f359313ab10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f359313ad10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe1a4bad8d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe1a4b96d90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f35936fe3d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f35936fe5d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe1a515c290&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe1a5168750&gt;]</pre>
 </div>
 
 </div>
