--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f67e92d7510&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f49b612d1d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f67e848bc10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f67e843dd50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f49b5e46bd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f49b5e46dd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f67e8a42550&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f67e8a02650&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f49b63b6490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f49b63b6690&gt;]</pre>
 </div>
 
 </div>
