--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3ed5b88850&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff8b09e5590&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3ed558bc10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3ed558be10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff8b0ffdc50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff8b0ffde50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3ed5e17650&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3ed5e17850&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff8b1553590&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff8b1553790&gt;]</pre>
 </div>
 
 </div>
