--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe5649f10d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f24f5ad7310&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe5646bbb90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe5646bbd90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f24f5e60a10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f24f5e60c10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe564c8e550&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe564c8e750&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f24f60a7390&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f24f60a7590&gt;]</pre>
 </div>
 
 </div>
