--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f09e704f910&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f76a9a9b150&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f09e6d13c50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f09e6d13e50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f76a97acc90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f76a97ace90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f09e72d5590&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f09e72d5790&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f76a9d29550&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f76a9d29750&gt;]</pre>
 </div>
 
 </div>
