--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f53d1711c50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f508b9b0690&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f53d1423c10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f53d1423e10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f508b6f7c10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f508b6f7e10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f53d19a04d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f53d19a06d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f508bf835d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f508bf837d0&gt;]</pre>
 </div>
 
 </div>
