--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fcc678c92d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9b0a364810&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fcc67309cd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fcc67309ed0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9b09d67b50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9b09d67d50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fcc67b88690&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fcc67b88890&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9b0a5f6410&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9b0a5f6610&gt;]</pre>
 </div>
 
 </div>
