--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7241af71d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc1b57f6510&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f72414edcd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f72414eded0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc1b550bc10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc1b54bd450&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7241d7a610&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7241d7a810&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc1b5a7a550&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc1b5a7a750&gt;]</pre>
 </div>
 
 </div>
